--- a/Header.html
+++ b/Header.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,14 +55,14 @@
                 </div>
                 <nav>
                     <ul>
-                        <li>Hair color</li>
-                        <li>Hair care</li>
-                        <li>Hair texture</li>
-                        <li>Hair Styling</li>
-                        <li>About us</li>
-                        <li>Media</li>
-                        <li>Blogs</li>
-                        <li>Contact us</li>
+                        <a href="page2.html"><li>Hair color</li></a>
+                        <li href="/">Hair care</li>
+                        <li href="/">Hair texture</li>
+                        <li href="/">Hair Styling</li>
+                        <li href="/">About us</li>
+                        <li href="/">Media</li>
+                        <li href="/">Blogs</li>
+                        <li href="/">Contact us</li>
                         <span class="line"></span>
                         <svg class="nav-search-icon" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -307,8 +306,7 @@
             </div>
         </div>
 
-        <div class="sec-2">
-            <div class="inline-cnt">
+        <!-- <div class="sec-2">
                 <div class="my-1">
                     <span>
                         Professional Hair Colour Trends and ideas
@@ -319,76 +317,77 @@
                     </p>
                     <button>Explore</button>
                 </div>
-                <div class="inliine-col">
-                    <div class="img-box">
-                        <div class="inline-img">
-                            <div class="img-cnt">
-                                <span>Before</span>
-                                <img src="/assets/half.png" alt="" style="position: absolute;">
-                                <div>
-                                    <div class="mid-btn">
-                                        <img src="/assets/Union.png" alt="">
-                                    </div>
-                                    <img src="/assets/image 68.png" alt="">
-                                    <span>After</span>
+               
+                     <div class="slider-container">
+                        <div class="images-container">
+                            <div class="sec-2-images">
+                                <img src="assets/Component 2.png" alt="">
+                                <img src="assets/Component 2.png" alt="">
+                                <img src="assets/Component 2.png" alt="">
+                                <img src="assets/Component 2.png" alt="">
+                                <img src="assets/Component 2.png" alt="">
+                            </div>
+                            <div class="inline-row">
+                                <div style="color: white;" class="num-row2">
+                                    <span>01</span>
+                                    <span>02</span>
+                                    <span>03</span>
+                                </div>
+                                <div class="arrow-btn">
+                                    <span><svg viewBox="0 0 1024 1024" class="icon prev-btn" version="1.1"
+                                            xmlns="http://www.w3.org/2000/svg" fill="#000000">
+                                            <g id="SVGRepo_bgCarrier" stroke-width="1.5"></g>
+                                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                            <g id="SVGRepo_iconCarrier">
+                                                <path
+                                                    d="M768 903.232l-50.432 56.768L256 512l461.568-448 50.432 56.768L364.928 512z"
+                                                    fill="#ffffff"></path>
+                                            </g>
+                                        </svg></span>
+                                    <span><svg viewBox="0 0 1024 1024" class="icon next-btn" version="1.1"
+                                            xmlns="http://www.w3.org/2000/svg" fill="#000000">
+                                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                                            <g id="SVGRepo_iconCarrier">
+                                                <path d="M256 120.768L306.432 64 768 512l-461.568 448L256 903.232 659.072 512z"
+                                                    fill="#ffffff"></path>
+                                            </g>
+                                        </svg></span>
                                 </div>
                             </div>
-                        </div>
-                        <div class="inline-img">
-                            <div class="img-cnt">
-                                <span>Before</span>
-                                <img src="/assets/half.png" alt="" style="position: absolute;">
-                                <div>
-                                    <div class="mid-btn">
-                                        <img src="/assets/Union.png" alt="">
-                                    </div>
-                                    <img src="/assets/image 68.png" alt="">
-                                    <span>After</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="inline-img">
-                            <div class="img-cnt">
-                                <span>Before</span>
-                                <img src="/assets/half.png" alt="" style="position: absolute;">
-                                <div class="mid-btn">
-                                    <img src="/assets/Union.png" alt="">
-                                </div>
-                                <img src="/assets/image 68.png" alt="">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="inline-row">
-                        <div style="color: white;" class="num-row2">
-                            <span>01</span>
-                            <span>02</span>
-                            <span>03</span>
-                        </div>
-                        <div class="arrow-btn">
-                            <span><svg viewBox="0 0 1024 1024" class="icon" version="1.1"
-                                    xmlns="http://www.w3.org/2000/svg" fill="#000000">
-                                    <g id="SVGRepo_bgCarrier" stroke-width="1.5"></g>
-                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                    <g id="SVGRepo_iconCarrier">
-                                        <path
-                                            d="M768 903.232l-50.432 56.768L256 512l461.568-448 50.432 56.768L364.928 512z"
-                                            fill="#ffffff"></path>
-                                    </g>
-                                </svg></span>
-                            <span><svg viewBox="0 0 1024 1024" class="icon right-arrow" version="1.1"
-                                    xmlns="http://www.w3.org/2000/svg" fill="#000000">
-                                    <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                                    <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                                    <g id="SVGRepo_iconCarrier">
-                                        <path d="M256 120.768L306.432 64 768 512l-461.568 448L256 903.232 659.072 512z"
-                                            fill="#ffffff"></path>
-                                    </g>
-                                </svg></span>
-                        </div>
-                    </div>
+                         </div>
+                     </div>
+            </div> -->
+    <div class="sec-2">
+        <div class="my-1">
+            <span>
+                Professional Hair Colour Trends and ideas
+            </span>
+            <p>
+                From curly hair to stick straight, Godrej Professional Keracare is suitable & beneficial for all
+                hair types.
+            </p>
+            <button>Explore</button>
+        </div>
+        <div class="image-slider">
+            <div class="slider-wrapper">
+                <div class="slider">
+                    <img src="assets/Component 2.png" alt="Image 1">
+                    <img src="assets/Component 2.png" alt="Image 1">
+                    <img src="assets/image 63.png" alt="Image 1">
+                    <img src="assets/Component 2.png" alt="Image 1">
+                    <img src="assets/Component 2.png" alt="Image 1">
+                    <!-- Add more images as needed -->
                 </div>
             </div>
+            <div>
+                <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
+            <button class="next" onclick="moveSlide(1)">&#10095;</button>
+            </div>
         </div>
+        
+    </div>
+
 
         <div class="blog-section">
             <div>
