--- a/Header.html
+++ b/Header.html
@@ -118,100 +118,105 @@
         </div>
     </div>
     <main>
-        <div class="main-txt">
-            <span>The hair colour</span>
-            <p class="sm-text">Indulge in our exclusive offer & reignite your love affair with your locks.</span>
-        </div>
-
-        <div class="image-section">
-            <div class="box">
-                <img src="/assets/image 1.png" alt="">
-                <button>Explore</button>
+        <div class="section">
+            <div class="main-txt">
+                <span>The hair colour</span>
+                <p class="sm-text">Indulge in our exclusive offer & reignite your love affair with your locks.</span>
             </div>
-            <div class="box-bg">
-                <div>
-                    <img src="/assets/image 35.png" alt="">
-                    <img src="/assets/dimention image 1.png" alt="" height="475.776px" width="309.183px">
+    
+            <div class="image-section">
+                <div class="box">
+                    <img src="/assets/image 1.png" alt="">
+                    <button>Explore</button>
                 </div>
-                <img src="/assets/arrow.png" alt="" class="arrow">
-            </div>
-            <div class="box-bg">
-                <div class="mx-2">
-                    <img src="/assets/image 36.png" alt="">
-                    <img src="/assets/image 33 (1).png" alt="">
+                <div class="box-bg">
+                    <div>
+                        <img src="/assets/image 35.png" alt="">
+                        <img src="/assets/dimention image 1.png" alt="" height="475.776px" width="309.183px">
+                    </div>
+                    <img src="/assets/arrow.png" alt="" class="arrow">
                 </div>
-                <img src="/assets/arrow.png" alt="" class="arrow2">
+                <div class="box-bg">
+                    <div class="mx-2">
+                        <img src="/assets/image 36.png" alt="">
+                        <img src="/assets/image 33 (1).png" alt="">
+                    </div>
+                    <img src="/assets/arrow.png" alt="" class="arrow2">
+                </div>
             </div>
-        </div>
-        <div class="btn-row">
-            <div class="carousel"></div>
             <div class="btn-row">
-                <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                        <g id="SVGRepo_iconCarrier">
-                            <path d="M15 7L10 12L15 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                        </g>
-                    </svg></button>
-                <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                        <g id="SVGRepo_iconCarrier">
-                            <path d="M10 7L15 12L10 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                        </g>
-                    </svg></button>
+                <div class="carousel"></div>
+                <div class="btn-row">
+                    <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <path d="M15 7L10 12L15 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round"></path>
+                            </g>
+                        </svg></button>
+                    <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <path d="M10 7L15 12L10 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round"></path>
+                            </g>
+                        </svg></button>
+                </div>
             </div>
         </div>
 
-        <div class="main-txt">
-            <span>The Hair Care</span>
-            <p class="sm-text">Indulge in our exclusive offer & reignite your love affair with your locks.</span>
-        </div>
-
-        <div class="image-section">
-            <div class="box">
-                <img src="/assets/image 32.png" alt="">
-                <button>Explore</button>
+        <div class="section">
+            <div class="main-txt">
+                <span>The Hair Care</span>
+                <p class="sm-text">Indulge in our exclusive offer & reignite your love affair with your locks.</span>
             </div>
-            <div class="box-bg">
-                <div>
-                    <img src="/assets/probio logo.png" alt="">
-                    <img src="/assets/probio keratin revive.png" alt="">
+    
+            <div class="image-section">
+                <div class="box">
+                    <img src="/assets/image 32.png" alt="">
+                    <button>Explore</button>
                 </div>
-                <img src="/assets/arrow.png" alt="" class="arrow">
-            </div>
-            <div class="box-bg">
-                <div class="mx-2">
-                    <img src="/assets/kera care logo.png" alt="">
-                    <img src="/assets/keracare moisture recharge shampoo.png" alt="">
+                <div class="box-bg">
+                    <div>
+                        <img src="/assets/probio logo.png" alt="">
+                        <img src="/assets/probio keratin revive.png" alt="">
+                    </div>
+                    <img src="/assets/arrow.png" alt="" class="arrow">
                 </div>
-                <img src="/assets/arrow.png" alt="" class="arrow2">
+                <div class="box-bg">
+                    <div class="mx-2">
+                        <img src="/assets/kera care logo.png" alt="">
+                        <img src="/assets/keracare moisture recharge shampoo.png" alt="">
+                    </div>
+                    <img src="/assets/arrow.png" alt="" class="arrow2">
+                </div>
             </div>
-        </div>
-        <div class="btn-row">
-            <div class="carousel"></div>
             <div class="btn-row">
-                <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                        <g id="SVGRepo_iconCarrier">
-                            <path d="M15 7L10 12L15 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                        </g>
-                    </svg></button>
-                <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                        <g id="SVGRepo_iconCarrier">
-                            <path d="M10 7L15 12L10 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                        </g>
-                    </svg></button>
+                <div class="carousel"></div>
+                <div class="btn-row">
+                    <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <path d="M15 7L10 12L15 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round"></path>
+                            </g>
+                        </svg></button>
+                    <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
+                            <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
+                            <g id="SVGRepo_iconCarrier">
+                                <path d="M10 7L15 12L10 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
+                                    stroke-linejoin="round"></path>
+                            </g>
+                        </svg></button>
+                </div>
             </div>
         </div>
 
+       <div class="section">
         <div class="main-txt">
             <span>The Hair Texture</span>
             <p class="sm-text">Indulge in our exclusive offer & reignite your love affair with your locks.</span>
@@ -258,7 +263,9 @@
                     </svg></button>
             </div>
         </div>
+       </div>
 
+       <div class="section">
         <div class="main-txt">
             <span>The Hair Styling</span>
             <p class="sm-text">Indulge in our exclusive offer & reignite your love affair with your locks.</span>
@@ -305,6 +312,7 @@
                     </svg></button>
             </div>
         </div>
+       </div>
 
         <!-- <div class="sec-2">
                 <div class="my-1">
