--- a/Header.html
+++ b/Header.html
@@ -118,6 +118,9 @@
         </div>
     </div>
     <main>
+        <div>
+
+        
         <div class="section">
             <div class="main-txt">
                 <span>The hair colour</span>
@@ -313,7 +316,7 @@
             </div>
         </div>
        </div>
-
+    </div>
         <!-- <div class="sec-2">
                 <div class="my-1">
                     <span>
@@ -396,12 +399,34 @@
         
     </div>
 
-
+<div class="blog-section-wrapper">
         <div class="blog-section">
             <div>
                 <span class="date-bx">September 14, 2023</span>
                 <p class="news-heading">
                     Top 10 Benefits Of Using Sulphate Free Shampoos For Damaged Hair
+                </p>
+                <span class="desc">
+                    Despite the fact that sulphates are frequently viewed as a necessary component of shampoos...
+                </span>
+                <img src="/assets/first-blog-img.png" alt="">
+                <button>Read Now</button>
+            </div>
+            <div>
+                <span class="date-bx">March 6, 2023</span>
+                <p class="news-heading">
+                    Follow This Holi Hair Care Routine For Healthy Hair
+                </p>
+                <span class="desc">
+                    Despite the fact that sulphates are frequently viewed as a necessary component of shampoos...
+                </span>
+                <img src="/assets/first-blog-img.png" alt="">
+                <button>Read Now</button>
+            </div>
+            <div>
+                <span class="date-bx">March 6, 2023</span>
+                <p class="news-heading">
+                    Follow This Holi Hair Care Routine For Healthy Hair
                 </p>
                 <span class="desc">
                     Despite the fact that sulphates are frequently viewed as a necessary component of shampoos...
@@ -435,25 +460,19 @@
         <div class="btn-row">
             <div class="carousel"></div>
             <div class="btn-row">
-                <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                        <g id="SVGRepo_iconCarrier">
-                            <path d="M15 7L10 12L15 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                        </g>
-                    </svg></button>
-                <button><svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
-                        <g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g>
-                        <g id="SVGRepo_iconCarrier">
-                            <path d="M10 7L15 12L10 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                stroke-linejoin="round"></path>
-                        </g>
-                    </svg></button>
+                <button id="prevBtn">
+                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M15 7L10 12L15 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                </button>
+                <button id="nextBtn">
+                    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 7L15 12L10 17" stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+                    </svg>
+                </button>
             </div>
         </div>
-
+    </div>
         <div class="feedback">
             <div class="user-box">
                 <img src="/assets/Group 3.png" alt="">
