search & review box

--- a/Header.html
+++ b/Header.html
@@ -87,7 +87,23 @@
                             </g>
                         </svg>
                     </ul>
+                    
                 </nav>
+                <div class="searchBox">
+                    <div class="search-container">
+                        <input type="text" placeholder="Search Products">
+                    <div class="search-result">
+                        <div>
+                            <span>Probo</span>
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M9 6.75C8.58579 6.75 8.25 6.41421 8.25 6C8.25 5.58579 8.58579 5.25 9 5.25H18C18.4142 5.25 18.75 5.58579 18.75 6V15C18.75 15.4142 18.4142 15.75 18 15.75C17.5858 15.75 17.25 15.4142 17.25 15V7.81066L6.53033 18.5303C6.23744 18.8232 5.76256 18.8232 5.46967 18.5303C5.17678 18.2374 5.17678 17.7626 5.46967 17.4697L16.1893 6.75H9Z" fill="#1C274C"></path> </g></svg>
+                        </div>
+                        <div>
+                            <span>Hair care shampoo</span>
+                        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path fill-rule="evenodd" clip-rule="evenodd" d="M9 6.75C8.58579 6.75 8.25 6.41421 8.25 6C8.25 5.58579 8.58579 5.25 9 5.25H18C18.4142 5.25 18.75 5.58579 18.75 6V15C18.75 15.4142 18.4142 15.75 18 15.75C17.5858 15.75 17.25 15.4142 17.25 15V7.81066L6.53033 18.5303C6.23744 18.8232 5.76256 18.8232 5.46967 18.5303C5.17678 18.2374 5.17678 17.7626 5.46967 17.4697L16.1893 6.75H9Z" fill="#1C274C"></path> </g></svg>
+                        </div>
+                    </div>
+                    </div>
+                </div>
                 <div class="mobile-nav">
                     <ul>
                         <div><li>Hair color</li><svg viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M256 120.768L306.432 64 768 512l-461.568 448L256 903.232 659.072 512z" fill="#000000"></path></g></svg></div>
@@ -473,7 +489,7 @@
             </div>
         </div>
     </div>
-        <div class="feedback">
+        <!-- <div class="feedback">
             <div class="user-box">
                 <img src="/assets/Group 3.png" alt="">
                 <span>What Peoples say’s</span>
@@ -527,7 +543,68 @@
             </div>
 
 
+        </div> -->
+
+        <section class="feedback-container">
+            <div class="feedback-static">
+                <div class="user-box">
+                    <img src="/assets/Group 3.png" alt="">
+                    <span>What Peoples say’s</span>
+                </div>
+              <h1>Customer Feedback</h1>
+            </div>
+            <div class="feedback-slider">
+              <div class="feedback-slider-wrapper">
+        <div class="review-box">
+            <div class="star-container"></div>
+            <h2>Fablous</h2>
+            <p>Makes my hair super shiny and soft. Using this with same shampoo. I keep it longer than 3
+                minutes
+                though. Wish it was available cheaper. Hasn't made any difference to hair though.</p>
+            <span>Neha kewalramani</span>
         </div>
+        <div class="review-box">
+            <div class="star-container"></div>
+            <h2>good</h2>
+            <p>Makes my hair super shiny and soft. Using this with same shampoo. I keep it longer than 3
+                minutes
+                though. Wish it was available cheaper. Hasn't made any difference to hair though.</p>
+            <span>Neha kewalramani</span>
+        </div>
+        <div class="review-box">
+            <div class="star-container"></div>
+            <h2>nice</h2>
+            <p>Makes my hair super shiny and soft. Using this with same shampoo. I keep it longer than 3
+                minutes
+                though. Wish it was available cheaper. Hasn't made any difference to hair though.</p>
+            <span>Neha kewalramani</span>
+        </div>
+        <div class="review-box">
+            <div class="star-container"></div>
+            <h2>new</h2>
+            <p>Makes my hair super shiny and soft. Using this with same shampoo. I keep it longer than 3
+                minutes
+                though. Wish it was available cheaper. Hasn't made any difference to hair though.</p>
+            <span>Neha kewalramani</span>
+        </div>
+        <div class="review-box">
+            <div class="star-container"></div>
+            <h2>new</h2>
+            <p>Makes my hair super shiny and soft. Using this with same shampoo. I keep it longer than 3
+                minutes
+                though. Wish it was available cheaper. Hasn't made any difference to hair though.</p>
+            <span>Neha kewalramani</span>
+        </div>
+              </div>
+            </div>
+          </section>
+          <div class="feedback-buttons">
+             <div class="feedback-dots"></div>
+            <div>
+                <button class="feedback-prev" onclick="prevReview()">&#10094;</button>
+            <button class="feedback-next" onclick="nextReview()">&#10095;</button>
+            </div>
+          </div>
 
         <div class="brand-value">
             <h2>Brand Value</h2>
